--- a/mysql/compose.yaml
+++ b/mysql/compose.yaml
@@ -4,7 +4,9 @@ services:
   db:
     image: mysql:8.4  # Mejor especificar una versión estable
     container_name: mysql-dev
-    restart: always
+    # Sin política de reinicio - el contenedor no se iniciará automáticamente
+    # Para iniciar: docker-compose up -d
+    # Para detener: docker-compose down
     ports:
       - "3306:3306"  # Expone MySQL al host
     environment:
